--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ name: Eddie Tran
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+# avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars.githubusercontent.com/u/13454088?s=400&u=15a3daff0b4c55e1c2b514d0f5ed541e50731aa6&v=4
 
 #
 # Flags below are optional
